// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing AdmRoutes  Should renders AdmRoutes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#184E79",
                            "display": "flex",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "flex-end",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "flexBasis": 0,
                              "flexDirection": "row-reverse",
                              "flexGrow": 10,
                              "flexShrink": 1,
                              "marginLeft": 30,
                            },
                          ]
                        }
                      />
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderTopLeftRadius": 20,
                              "borderTopRightRadius": 20,
                              "display": "flex",
                              "flexBasis": 0,
                              "flexGrow": 78,
                              "flexShrink": 1,
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <RCTScrollView
                          data={
                            Array [
                              Object {
                                "id": "101",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Professores Pendentes",
                              },
                              Object {
                                "id": "171",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Usuários Reportados",
                              },
                            ]
                          }
                          disableVirtualization={false}
                          getItem={[Function]}
                          getItemCount={[Function]}
                          horizontal={true}
                          initialNumToRender={10}
                          keyExtractor={[Function]}
                          maxToRenderPerBatch={10}
                          onContentSizeChange={[Function]}
                          onEndReachedThreshold={2}
                          onLayout={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={50}
                          stickyHeaderIndices={Array []}
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "flexDirection": "row",
                                "paddingBottom": "120%",
                                "position": "absolute",
                              },
                            ]
                          }
                          updateCellsBatchingPeriod={50}
                          viewabilityConfigCallbackPairs={Array []}
                          windowSize={21}
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Professores Pendentes
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Usuários Reportados
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexBasis": 0,
                                "flexDirection": "column-reverse",
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "marginBottom": "10%",
                              },
                            ]
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "backgroundColor": "#E46270",
                                "borderRadius": 10,
                                "height": 30,
                                "justifyContent": "center",
                                "opacity": 1,
                                "width": "80%",
                              }
                            }
                            testID="signout"
                          >
                            <Text
                              bigSmall={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#ffffff",
                                    "fontFamily": "Roboto",
                                    "fontSize": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                              white={true}
                            >
                              Sair
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`Testing AdmRoutes  Should renders AlunoRoutes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#184E79",
                            "display": "flex",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "flex-end",
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexDirection": "row-reverse",
                            "flexGrow": 10,
                            "flexShrink": 1,
                            "marginBottom": "5%",
                            "opacity": 1,
                            "paddingBottom": "10%",
                            "paddingLeft": "10%",
                            "paddingRight": "10%",
                            "paddingTop": "10%",
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#ffffff",
                                "fontFamily": "Roboto",
                                "fontSize": 20,
                                "textAlign": "center",
                              },
                            ]
                          }
                          white={true}
                        >
                          Selecione as disciplinas em que deseja lecionar
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderTopLeftRadius": 20,
                              "borderTopRightRadius": 20,
                              "display": "flex",
                              "flexBasis": 0,
                              "flexGrow": 78,
                              "flexShrink": 1,
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <RCTScrollView
                          data={
                            Array [
                              Object {
                                "id": "1",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Reforço Escolar",
                              },
                              Object {
                                "id": "2",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Idiomas",
                              },
                              Object {
                                "id": "3",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Vestibular",
                              },
                            ]
                          }
                          disableVirtualization={false}
                          extraData={null}
                          getItem={[Function]}
                          getItemCount={[Function]}
                          horizontal={true}
                          initialNumToRender={10}
                          keyExtractor={[Function]}
                          maxToRenderPerBatch={10}
                          onContentSizeChange={[Function]}
                          onEndReachedThreshold={2}
                          onLayout={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={50}
                          stickyHeaderIndices={Array []}
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "paddingBottom": "120%",
                                "position": "absolute",
                              },
                            ]
                          }
                          testID="listFiltro"
                          updateCellsBatchingPeriod={50}
                          viewabilityConfigCallbackPairs={Array []}
                          windowSize={21}
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  source={
                                    Object {
                                      "testUri": "../../../src/assets/books.png",
                                    }
                                  }
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Reforço Escolar
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  source={
                                    Object {
                                      "testUri": "../../../src/assets/books.png",
                                    }
                                  }
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Idiomas
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  source={
                                    Object {
                                      "testUri": "../../../src/assets/books.png",
                                    }
                                  }
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Vestibular
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexBasis": 0,
                                "flexGrow": 5,
                                "flexShrink": 1,
                                "justifyContent": "center",
                                "marginTop": "5%",
                              },
                            ]
                          }
                        >
                          <View
                            accessible={true}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              Object {
                                "alignSelf": "center",
                                "backgroundColor": "#D9D9D9",
                                "borderRadius": 20,
                                "height": "58%",
                                "opacity": 1,
                                "width": "78%",
                              }
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "flexBasis": 0,
                                    "flexDirection": "row",
                                    "flexGrow": 2,
                                    "flexShrink": 1,
                                    "paddingLeft": "6%",
                                    "paddingTop": "6%",
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "testUri": "../../../src/assets/books.png",
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "marginRight": "3%",
                                      "width": 28,
                                    },
                                  ]
                                }
                              />
                              <Text
                                bigSmall={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#596C7C",
                                      "fontFamily": "Roboto",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Proxima Aula
                              </Text>
                            </View>
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignSelf": "center",
                                    "flexBasis": 0,
                                    "flexGrow": 4,
                                    "flexShrink": 1,
                                    "marginLeft": "-30%",
                                  },
                                ]
                              }
                            >
                              <Text
                                big={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#596C7C",
                                      "fontFamily": "Roboto",
                                      "fontSize": 45,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                12 Nov
                              </Text>
                            </View>
                            <View
                              style={
                                Array [
                                  Object {
                                    "flexBasis": 0,
                                    "flexDirection": "row",
                                    "flexGrow": 2,
                                    "flexShrink": 1,
                                    "justifyContent": "space-around",
                                    "paddingTop": "6%",
                                  },
                                ]
                              }
                            >
                              <Text
                                bigSmall={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#596C7C",
                                      "fontFamily": "Roboto",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                16 - 18 Horas
                              </Text>
                              <Text
                                bigSmall={true}
                                blue={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#184E79",
                                      "fontFamily": "Roboto",
                                      "fontSize": 16,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                              >
                                Matemática
                              </Text>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexBasis": 0,
                                "flexGrow": 2,
                                "flexShrink": 1,
                                "justifyContent": "center",
                                "marginBottom": "15%",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "alignSelf": "center",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "height": "25%",
                                  "justifyContent": "center",
                                },
                              ]
                            }
                          >
                            <View
                              accessible={true}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#E46270",
                                  "borderRadius": 10,
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "height": 50,
                                  "justifyContent": "center",
                                  "marginTop": "5%",
                                  "opacity": 1,
                                  "width": 200,
                                }
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "testUri": "../../../src/assets/books.png",
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "marginRight": "3%",
                                      "width": 28,
                                    },
                                  ]
                                }
                              />
                              <Text
                                medium={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                      "fontFamily": "Roboto",
                                      "fontSize": 25,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                white={true}
                              >
                                Aula Urgente
                              </Text>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#184E79",
                                  "borderRadius": 10,
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "height": 50,
                                  "justifyContent": "center",
                                  "marginTop": "5%",
                                  "opacity": 1,
                                  "width": 200,
                                }
                              }
                              testID="MarcarAula"
                            >
                              <Image
                                source={
                                  Object {
                                    "testUri": "../../../src/assets/books.png",
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "marginRight": "3%",
                                      "width": 28,
                                    },
                                  ]
                                }
                              />
                              <Text
                                medium={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                      "fontFamily": "Roboto",
                                      "fontSize": 25,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                white={true}
                              >
                                Marcar Aula
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`Testing AdmRoutes  Should renders AuthRoutes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "backgroundColor": "#184E79",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "center",
                          },
                        ]
                      }
                      testID="background"
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "#184E79",
                              "flexBasis": 0,
                              "flexGrow": 0.7,
                              "flexShrink": 1,
                              "justifyContent": "center",
                              "width": "100%",
                            },
                          ]
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../src/assets/logo.png",
                            }
                          }
                          style={
                            Array [
                              Object {
                                "height": "76.5%",
                                "marginBottom": "14%",
                                "width": "50%",
                              },
                            ]
                          }
                          testID="Logo"
                        />
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "#ffffff",
                              "borderTopLeftRadius": 20,
                              "borderTopRightRadius": 20,
                              "flexBasis": 0,
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "center",
                              "width": "100%",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "marginBottom": "83.5%",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#D9D9D9",
                                  "borderRadius": 15,
                                  "height": 360,
                                  "justifyContent": "center",
                                  "marginTop": "55.5%",
                                  "width": 306,
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#184E79",
                                    "borderRadius": 100,
                                    "height": "16.11%",
                                    "justifyContent": "center",
                                    "marginBottom": 30,
                                    "marginTop": "5%",
                                    "width": "18.95%",
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "testUri": "../../../src/assets/user_white.png",
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": "63%",
                                      "width": "52%",
                                    },
                                  ]
                                }
                                testID="Icon"
                              />
                            </View>
                            <TextInput
                              allowFontScaling={true}
                              autoCapitalize="none"
                              multiline={true}
                              onChangeText={[Function]}
                              placeholder="Email"
                              placeholderTextColor="#F6F6F6"
                              rejectResponderTermination={true}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#184E79",
                                    "borderRadius": 10,
                                    "color": "#ffffff",
                                    "height": 45,
                                    "justifyContent": "center",
                                    "marginTop": "5%",
                                    "width": 280,
                                  },
                                ]
                              }
                              textAlign="center"
                              underlineColorAndroid="transparent"
                            />
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#184E79",
                                    "borderRadius": 10,
                                    "flexDirection": "row",
                                    "height": 45,
                                    "justifyContent": "center",
                                    "marginTop": "5%",
                                    "width": 280,
                                  },
                                ]
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "backgroundColor": "#184E79",
                                      "borderRadius": 10,
                                      "flexDirection": "row",
                                      "height": 45,
                                      "justifyContent": "center",
                                      "marginTop": "5%",
                                      "width": 280,
                                    },
                                  ]
                                }
                              >
                                <TextInput
                                  allowFontScaling={true}
                                  autoCapitalize="none"
                                  onChangeText={[Function]}
                                  placeholder="Senha"
                                  placeholderTextColor="#F6F6F6"
                                  rejectResponderTermination={true}
                                  secureTextEntry={true}
                                  style={
                                    Object {
                                      "color": "#FFFFFF",
                                      "flex": 1,
                                      "fontSize": 14,
                                      "textAlign": "center",
                                    }
                                  }
                                  testID="password"
                                  underlineColorAndroid="transparent"
                                  value=""
                                />
                              </View>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "alignItems": "center",
                                  "backgroundColor": "#184E79",
                                  "borderRadius": 10,
                                  "height": 50,
                                  "justifyContent": "center",
                                  "marginTop": 20,
                                  "opacity": 1,
                                  "width": 200,
                                }
                              }
                              testID="signIn"
                            >
                              <Text
                                medium={true}
                                style={
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                      "fontFamily": "Roboto",
                                      "fontSize": 25,
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                white={true}
                              >
                                Entrar
                              </Text>
                            </View>
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "marginBottom": "10%",
                                  "marginTop": 10,
                                  "opacity": 1,
                                }
                              }
                              testID="signUp"
                            >
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#ffffff",
                                      "fontFamily": "Roboto",
                                      "fontSize": 20,
                                      "textShadowColor": "#596C7C",
                                      "textShadowOffset": Object {
                                        "height": 1.5,
                                        "width": -1.5,
                                      },
                                      "textShadowRadius": 4,
                                    },
                                  ]
                                }
                              >
                                Registre-se
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`Testing AdmRoutes  Should renders ProfRoutes 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransitionStart={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#184E79",
                            "display": "flex",
                            "flexBasis": 0,
                            "flexGrow": 1,
                            "flexShrink": 1,
                            "justifyContent": "flex-end",
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "alignItems": "center",
                            "flexBasis": 0,
                            "flexDirection": "row-reverse",
                            "flexGrow": 10,
                            "flexShrink": 1,
                            "marginBottom": "5%",
                            "opacity": 1,
                            "paddingBottom": "10%",
                            "paddingLeft": "10%",
                            "paddingRight": "10%",
                            "paddingTop": "10%",
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#ffffff",
                                "fontFamily": "Roboto",
                                "fontSize": 20,
                                "textAlign": "center",
                              },
                            ]
                          }
                          white={true}
                        >
                          Selecione as disciplinas em que deseja lecionar
                        </Text>
                      </View>
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderTopLeftRadius": 20,
                              "borderTopRightRadius": 20,
                              "display": "flex",
                              "flexBasis": 0,
                              "flexGrow": 78,
                              "flexShrink": 1,
                              "justifyContent": "center",
                            },
                          ]
                        }
                      >
                        <RCTScrollView
                          data={
                            Array [
                              Object {
                                "id": "101",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Aulas Marcadas",
                              },
                              Object {
                                "id": "102",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Aulas Pendentes",
                              },
                              Object {
                                "id": "103",
                                "img": Object {
                                  "testUri": "../../../src/assets/books.png",
                                },
                                "name": "Aulas Realizadas",
                              },
                            ]
                          }
                          disableVirtualization={false}
                          getItem={[Function]}
                          getItemCount={[Function]}
                          horizontal={true}
                          initialNumToRender={10}
                          keyExtractor={[Function]}
                          maxToRenderPerBatch={10}
                          onContentSizeChange={[Function]}
                          onEndReachedThreshold={2}
                          onLayout={[Function]}
                          onMomentumScrollEnd={[Function]}
                          onScroll={[Function]}
                          onScrollBeginDrag={[Function]}
                          onScrollEndDrag={[Function]}
                          removeClippedSubviews={false}
                          renderItem={[Function]}
                          scrollEventThrottle={50}
                          stickyHeaderIndices={Array []}
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "flexDirection": "row",
                                "paddingBottom": "120%",
                                "position": "absolute",
                              },
                            ]
                          }
                          updateCellsBatchingPeriod={50}
                          viewabilityConfigCallbackPairs={Array []}
                          windowSize={21}
                        >
                          <View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Aulas Marcadas
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Aulas Pendentes
                                  </Text>
                                </View>
                              </View>
                            </View>
                            <View
                              onLayout={[Function]}
                              style={
                                Array [
                                  Object {
                                    "flexDirection": "row",
                                  },
                                  null,
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "backgroundColor": "#D9D9D9",
                                    "borderRadius": 10,
                                    "height": 95,
                                    "marginBottom": 20,
                                    "marginRight": 20,
                                    "opacity": 1,
                                    "width": 95,
                                  }
                                }
                                testID="SquareButton"
                              >
                                <Image
                                  style={
                                    Array [
                                      Object {
                                        "height": 50,
                                        "marginTop": 8,
                                        "width": 60,
                                      },
                                    ]
                                  }
                                />
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "paddingTop": 10,
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    black={true}
                                    smaller={true}
                                    style={
                                      Array [
                                        Object {
                                          "color": "black",
                                          "fontFamily": "Roboto",
                                          "fontSize": 12,
                                          "textAlign": "center",
                                        },
                                      ]
                                    }
                                  >
                                    Aulas Realizadas
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          accessible={true}
                          focusable={true}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "alignSelf": "center",
                              "backgroundColor": "#E46270",
                              "borderRadius": 20,
                              "height": "33%",
                              "marginBottom": "45%",
                              "marginTop": "15%",
                              "opacity": 1,
                              "width": "78%",
                            }
                          }
                          testID="button"
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "paddingBottom": "4%",
                                  "paddingLeft": "6%",
                                  "paddingTop": "4%",
                                },
                              ]
                            }
                          >
                            <Image
                              source={
                                Object {
                                  "testUri": "../../../src/assets/books.png",
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "height": 30,
                                    "marginRight": "3%",
                                    "width": 36,
                                  },
                                ]
                              }
                            />
                            <Text
                              bigSmall={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#ffffff",
                                    "fontFamily": "Roboto",
                                    "fontSize": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                              white={true}
                            >
                              Proxima Aula
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "paddingBottom": "3%",
                                  "paddingLeft": "7%",
                                },
                              ]
                            }
                          >
                            <Text
                              big={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#ffffff",
                                    "fontFamily": "Roboto",
                                    "fontSize": 45,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                              white={true}
                            >
                              12 Jun
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "paddingBottom": "4%",
                                  "paddingLeft": "6%",
                                  "paddingTop": "4%",
                                },
                              ]
                            }
                          >
                            <Text
                              bigSmall={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#ffffff",
                                    "fontFamily": "Roboto",
                                    "fontSize": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                              white={true}
                            >
                              16 - 18 Horas
                               
                            </Text>
                            <Text
                              bigSmall={true}
                              style={
                                Array [
                                  Object {
                                    "color": "#596C7C",
                                    "fontFamily": "Roboto",
                                    "fontSize": 16,
                                    "textAlign": "center",
                                  },
                                ]
                              }
                            >
                               
                              Matemática
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Object {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;
